<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TutoAndroidEmse</string>
    <string name="buildings">Buildings</string>
    <string name="room">Room</string>
    <string name="light">Light</string>
    <string name="light_level">Light Level</string>
    <string name="level">Level</string>
    <string name="status">Status</string>
    <string name="lightonoff">Light ON/OFF</string>
    <string name="ok">OK</string>
    <string name="set_level">Set Level</string>
    <string name="about">About</string>
    <string name="new_object">New Object</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="type_choice">Choose an item type</string>
    <string name="name">Name</string>
    <string name="new_room">New Room</string>
    <string name="new_light">New Light</string>
    <string name="id">ID</string>
    <string name="room_id">Room ID</string>
    <string name="building_id">Building ID</string>
</resources>
